# PyCQLog

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pycqlog  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  arquitetura.md  awards.md  configuracoes.md  dashboard.md  desktop_pyqt.md  exportacao_adif.md  faq_en.md  faq_pt-BR.md  fluxo_registro_qso.md  guia_do_usuario_pt-BR.md  importacao_adif.md  inicio_rapido_pt-BR.md  integracoes.md  internacionalizacao.md  logbooks_perfis.md  persistencia_local.md  quick_start_en.md  roadmap.md  temas.md  user_guide_en.md
packaging/: README.md  build_deb.sh  deb_launcher.sh  pycqlog.desktop
packaging/systemd/: pycqlog-service.service
samples/: export_filtered_validation.adi  export_validation.adi  generate_sample_adif.py  sample_900_qsos.adi
src/pycqlog/: __init__.py  bootstrap.py  localization.py  main.py  service_main.py  themes.py  ui_colors.py
src/pycqlog/application/: dto.py  ports.py  use_cases.py
src/pycqlog/domain/: awards.py  awards_data.py  models.py  services.py
src/pycqlog/infrastructure/: adif.py  adif_export.py  app_logging.py  callbook.py  integrations.py  integrations_qrz.py  lotw.py  remote_client.py  remote_serialization.py  remote_station_service.py  repositories.py  service_api.py  settings.py  station_service.py  sync_audit.py
src/pycqlog/interfaces/desktop/: adif_preview_dialog.py  adif_settings_dialog.py  app.py  dashboard_dialog.py  dashboard_settings_dialog.py  directories_dialog.py  export_adif_dialog.py  logbooks_dialog.py  (+5 more)
tests/: test_save_qso.py
